# Console-ROS-Package

./: CMakeLists.txt  package.xml
include/Console/: console.hpp
msg/: gripper.msg
src/: console.cpp  main.cpp
